--- a/src/pages/IndexPage/IndexPage.css
+++ b/src/pages/IndexPage/IndexPage.css
@@ -1,7 +1,6 @@
 .query-result {
   min-height: 200px;
   height: 100%;
-  max-height: 400px;
 }
 
 .query-result-bg {
@@ -16,4 +15,20 @@
 
 .query-result-avatar {
   border: 4px solid white;
+}
+
+@media screen and (max-width: 768px) {
+  .query-result {
+    max-height: fit-content;
+  }
+
+  .grid-wrapper {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .grid-wrapper {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
